--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,50 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<title>Amascut Helper</title>
 	<style>
-	.attacks {
-		width:100%;
-	}
-	.attacks tr {
-	    background: linear-gradient(#534c44, #271d14, #190e03, #190e03, #241a11);
-	}
-	.attacks tr.selected { 
-		background: linear-gradient(#1a0b00, #11d10b);
-	}
-	.attacks td {
-		border: 1px solid #913200;
-		text-align: center
-	}
+		body {
+			font-family: Arial, sans-serif;
+			color: white;
+			background-color: #121212;
+		}
+		#title {
+			font-size: 24px;
+			margin: 10px 0;
+			text-align: center;
+		}
+		.attacks {
+			width: 100%;
+			border-collapse: collapse;
+			margin-top: 10px;
+		}
+		.attacks tr {
+			background: linear-gradient(#534c44, #271d14, #190e03, #190e03, #241a11);
+		}
+		.attacks tr.selected {
+			background: linear-gradient(#1a0b00, #11d10b);
+		}
+		.attacks td {
+			border: 1px solid #913200;
+			text-align: center;
+			padding: 10px;
+			font-size: 18px;
+		}
 	</style>
 </head>
 <body class="nis">
-	<div id="phase" class="crty-header">Amascut Helper</div>
+	<div id="title">Amascut Combat Style Priority</div>
 	<table id="spec" class="attacks">
 		<tbody>
-			<tr class="selected">
-				<td>Pray Flick</td>
+			<tr id="style1" class="selected">
+				<td>Waiting...</td>
 			</tr>
-			<tr>
-				<td>Pray Flick</td>
+			<tr id="style2">
+				<td></td>
 			</tr>
-			<tr>
-				<td>Pray Flick</td>
+			<tr id="style3">
+				<td></td>
 			</tr>
 		</tbody>
 	</table>
