--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
             </tr>
         </tbody>
     </table>
-    <script src="./main.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 </html>
