--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body class="nis">
-    <div id="title">Amascut Combat Style Priority</div>
+    <div id="title">Amascut Helper</div>
     <table id="spec" class="attacks">
         <tbody>
             <tr id="style1" class="selected">
