--- a/index.html
+++ b/index.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Amascut Helper</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            color: white;
-            background-color: #121212;
-        }
-        #title {
-            font-size: 24px;
-            margin: 10px 0;
-            text-align: center;
-        }
-        .attacks {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-        }
-        .attacks tr {
-            background: linear-gradient(#534c44, #271d14, #190e03, #190e03, #241a11);
-        }
-        .attacks tr.selected {
-            background: linear-gradient(#1a0b00, #11d10b);
-        }
-        .attacks td {
-            border: 1px solid #913200;
-            text-align: center;
-            padding: 10px;
-            font-size: 18px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Amascut Helper</title>
+
+  <!-- Alt1 globals (must be before script.js) -->
+  <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
+  <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
+  <script src="https://www.unpkg.com/alt1/dist/chatbox/index.js"></script>
+
+  <!-- Your styles (moved here from TS imports) -->
+  <link rel="stylesheet" href="https://runeapps.org/nis/nis.css" />
+  <link rel="stylesheet" href="./css/nis.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/tooltipster.bundle.min.css" />
+  <link rel="stylesheet" href="./css/tooltipster.css" />
+
+  <style>
+    /* keep your simple table look */
+    body { font-family: Arial, sans-serif; color: #fff; background:#121212; }
+    #title { font-size: 24px; margin: 10px 0; text-align: center; }
+    .attacks { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    .attacks tr { background: linear-gradient(#534c44,#271d14,#190e03,#190e03,#241a11); }
+    .attacks tr.selected { background: linear-gradient(#1a0b00,#11d10b); }
+    .attacks td { border: 1px solid #913200; text-align:center; padding:10px; font-size:18px; }
+    #output { margin:8px 0; font-size:11px; opacity:.75; }
+  </style>
 </head>
 <body class="nis">
-    <div id="title">Amascut Helper</div>
-    <table id="spec" class="attacks">
-        <tbody>
-            <tr id="style1" class="selected">
-                <td>Waiting...</td>
-            </tr>
-            <tr id="style2">
-                <td></td>
-            </tr>
-            <tr id="style3">
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-    <script src="./src/index.ts"></script>
+  <div id="title">Amascut Helper</div>
+
+  <table id="spec" class="attacks">
+    <tbody>
+      <tr id="style1" class="selected"><td>Waiting...</td></tr>
+      <tr id="style2"><td></td></tr>
+      <tr id="style3"><td></td></tr>
+    </tbody>
+  </table>
+
+  <!-- tiny log area -->
+  <div id="output"></div>
+
+  <!-- Your app logic (no imports needed) -->
+  <script src="./src/script.js"></script>
 </body>
 </html>
