--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 </table>
 <div id="output"></div>
 
-  <script src="./src/script.js"></script>
+  <script src="./src/script-v4.js"></script>
 </body>
 </html>
