--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <script src="https://www.unpkg.com/alt1/dist/chatbox/index.js"></script>
 
   <link rel="stylesheet" href="https://runeapps.org/nis/nis.css" />
-  <link rel="stylesheet" href="./css/nis.css" />
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="./css/tooltipster.bundle.min.css" />
-  <link rel="stylesheet" href="./css/tooltipster.css" />
+  <link rel="stylesheet" href="./src/css/nis.css" />
+  <link rel="stylesheet" href="./src/css/style.css" />
+  <link rel="stylesheet" href="./src/css/tooltipster.bundle.min.css" />
+  <link rel="stylesheet" href="./src/css/tooltipster.css" />
 
   <style>
-
     body { font-family: Arial, sans-serif; color: #fff; background:#121212; }
     #title { font-size: 24px; margin: 10px 0; text-align: center; }
     .attacks { width: 100%; border-collapse: collapse; margin-top: 10px; }
@@ -28,14 +27,14 @@
 <body class="nis">
   <div id="title">Amascut Helper</div>
 
-<table id="spec" class="attacks">
-  <tbody>
-    <tr id="style1" class="selected"><td>Waiting...</td></tr>
-    <tr id="style2"><td></td></tr>
-    <tr id="style3"><td></td></tr>
-  </tbody>
-</table>
-<div id="output"></div>
+  <table id="spec" class="attacks">
+    <tbody>
+      <tr id="style1" class="selected"><td>Waiting...</td></tr>
+      <tr id="style2"><td></td></tr>
+      <tr id="style3"><td></td></tr>
+    </tbody>
+  </table>
+  <div id="output"></div>
 
   <script src="./src/script-v4.js"></script>
 </body>
