--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
   </table>
   <div id="output"></div>
 
-  <script src="./src/script-v4.js"></script>
+<script src="./bundle.js"></script>
 </body>
 </html>
