--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8" />
   <title>Amascut Helper</title>
 
+  <!-- Alt1 libs (must load before your script) -->
   <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/chatbox/index.js"></script>
 
+  <!-- Styles -->
   <link rel="stylesheet" href="https://runeapps.org/nis/nis.css" />
   <link rel="stylesheet" href="./src/css/nis.css" />
   <link rel="stylesheet" href="./src/css/style.css" />
@@ -34,8 +36,9 @@
       <tr id="style3"><td></td></tr>
     </tbody>
   </table>
+
   <div id="output"></div>
 
-<script src="./bundle.js"></script>
+  <script defer src="./src/script.js"></script>
 </body>
 </html>
