--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 
   <div id="output"></div>
 
-  <script defer src="./src/script.js"></script>
+  <script defer src="./src/script-v5.js"></script>
 </body>
 </html>
