--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <title>Amascut Helper</title>
 
-  <!-- Alt1 libs (must load before your script) -->
+  <!-- Alt1 libs -->
   <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/chatbox/index.js"></script>
 
-  <!-- Styles -->
+  <!-- Styles (keep your paths) -->
   <link rel="stylesheet" href="https://runeapps.org/nis/nis.css" />
   <link rel="stylesheet" href="./src/css/nis.css" />
   <link rel="stylesheet" href="./src/css/style.css" />
@@ -29,7 +29,6 @@
 <body class="nis">
   <div id="title">Amascut Helper</div>
 
-  
   <table id="spec" class="attacks">
     <tbody>
       <tr id="style1" class="selected"><td>Waiting...</td></tr>
@@ -40,6 +39,7 @@
 
   <div id="output"></div>
 
-<script defer src="./src/script-v5.js?v=2025-08-09a"></script>
+  <!-- Cache-bust with ?v=... if needed -->
+  <script defer src="./src/script.js"></script>
 </body>
 </html>
