--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8" />
   <title>Amascut Helper</title>
 
-  <!-- Alt1 libs -->
   <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/chatbox/index.js"></script>
 
-  <!-- Styles (keep your paths) -->
   <link rel="stylesheet" href="https://runeapps.org/nis/nis.css" />
   <link rel="stylesheet" href="./src/css/nis.css" />
   <link rel="stylesheet" href="./src/css/style.css" />
@@ -39,7 +37,6 @@
 
   <div id="output"></div>
 
-  <!-- Cache-bust with ?v=... if needed -->
-  <script defer src="./src/script.js"></script>
+  <script defer src="./src/script-v6.js"></script>
 </body>
 </html>
