--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
   <div id="output">
   <!--<div id="output"></div>-->
 
-  <script src="./src/scriptv1.js"></script>
+  <script src="./src/script.js"></script>
 </body>
 </html>
