--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Amascut Helper</title>
+  <title>Amascut Test</title>
 
   <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
@@ -24,11 +24,11 @@
   </style>
 </head>
 <body class="nis">
-  <div id="title">Amascut Helper</div>
+  <div id="title">Kitty</div>
 
   <table id="spec" class="attacks">
     <tbody>
-      <tr id="style1" class="selected"><td>Waiting..</td></tr>
+      <tr id="style1" class="selected"><td>Waiting.</td></tr>
       <tr id="style2"><td></td></tr>
       <tr id="style3"><td></td></tr>
     </tbody>
@@ -37,6 +37,6 @@
   <div id="output">
   <!--<div id="output"></div>-->
 
-  <script src="./src/script.js"></script>
+  <script src="./src/script1.js"></script>
 </body>
 </html>
