--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body class="nis">
-  <div id="title">Kitty</div>
+  <div id="title">Amascut</div>
 
   <table id="spec" class="attacks">
     <tbody>
