added header to link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta property="og:title" content="Amascut Helper">
+  <meta property="og:description" content="A helper for Amascut mechanics.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/RSSaltea/amascut-helper/main/assets/amascut-helper-demo-settings.png">
+  <meta property="twitter:card" content="summary_large_image">
   <title>Amascut Test</title>
 
   <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
