--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     <div class="ah-logs" id="output"></div>
   </div>
 
-  <script src="./src/script1.js?v=5.2"></script>
+  <script src="./src/script.js?v=5.2"></script>
 </body>
 </html>
